kubernetes/apps/matrix/element-service.yml
apiVersion: v1
kind: Service
metadata:
  name: element-web
  namespace: apps
  labels:
    app.kubernetes.io/name: element-web
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: element-web
