kubernetes/apps/matrix/synapse-service.yml
apiVersion: v1
kind: Service
metadata:
  name: synapse
  namespace: apps
  labels:
    app.kubernetes.io/name: synapse
spec:
  ports:
  - port: 8008
    targetPort: 8008
    name: http
  selector:
    app: synapse
